@@ -6,18 +6,16 @@
 
 plugins {
     id 'java-library'
-    id 'maven-publish'
     id 'java'
-    id 'org.springframework.boot' version '3.3.4'
+    id 'org.springframework.boot' version '3.3.5'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
 repositories {
-    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
     api libs.org.springframework.boot.spring.boot.starter.web
     api libs.org.springframework.boot.spring.boot.starter.data.jpa
     api libs.org.thymeleaf.thymeleaf
@@ -36,6 +34,7 @@ dependencies {
     runtimeOnly libs.com.mysql.mysql.connector.j
     testImplementation libs.org.springframework.boot.spring.boot.starter.test
     testImplementation libs.org.springframework.security.spring.security.test
+    implementation 'org.springframework.boot:spring-boot-starter'
     compileOnly 'org.projectlombok:lombok:1.18.34'
     // Need to specify lombok as an annotation processor or it doesn't work
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
@@ -44,13 +43,16 @@ dependencies {
 group = 'com.example'
 version = '0.0.1'
 description = 'spring'
-java.sourceCompatibility = JavaVersion.VERSION_21
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from(components.java)
-        }
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
     }
 }
 
@@ -68,6 +70,14 @@ jar {
                 'Main-Class': 'com.example.spring.Application'
         )
     }
+}
+
+tasks.named('test') {
+    useJUnitPlatform()
+}
+
+test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 
